# FishPopulation

./: CMakeLists.txt  LambdaSimulation.cpp  README.md  nosed.csv  prob_simulation.ipynb  prob_simulation2.ipynb  white.csv
